feat: added lit review to thesis

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -97,6 +97,260 @@
     doi = {10.1037/0033-2909.118.3.392}
 }
 
+@misc{simd,
+  title = {Scottish Index of Multiple Deprivation 2020},
+  author = {Scottish Government},
+  year = {2020},
+  howpublished = {\url{https://www.gov.scot/publications/scottish-index-multiple-deprivation-2020}}
+}
+
+@misc{household-survey-2019,
+  title = {Scottish Household Survey 2019: Key Findings},
+  author = {Scottish Government},
+  year = {2019},
+  howpublished = {\url{https://www.gov.scot/publications/scottish-household-survey-2019-key-findings}}
+}
+
+@misc{littering-behaviour,
+  title = {Rapid Evidence Review of Littering Behaviour and Anti-Litter Policies},
+  author = {Zero Waste Scotland},
+  year = {2013},
+  howpublished = {\url{https://www.zerowastescotland.org.uk/sites/default/files/Rapid\%20Evidence\%20Review\%20of\%20Littering\%20Behaviour\%20and\%20Anti-Litter\%20Policies.pdf}}
+}
+
+@misc{impacts-of-15,
+  title = {Impacts of 1.5c of Global Warming on Natural and Human Systems},
+  author = {Ove Hoegh-Guldberg, Daniela Jaboc, Michael Taylor},
+  year = {2019},
+  howpublished = {\url{https://www.ipcc.ch/site/assets/uploads/sites/2/2019/06/SR15_Chapter3_Low_Res.pdf}}
+}
+
+@misc{tackle-litter,
+  title = {Time for a new approach to tackling litter},
+  author = {Keep Scotland Beautiful},
+  year = {2020},
+  howpublished = {\url{https://www.keepscotlandbeautiful.org/media/1566897/leq-2020-report-final-041220.pdf}}
+}
+
+@misc{yolov1,
+      title={You Only Look Once: Unified, Real-Time Object Detection}, 
+      author={Joseph Redmon and Santosh Divvala and Ross Girshick and Ali Farhadi},
+      year={2016},
+      eprint={1506.02640},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{yolo2,
+      title={YOLO9000: Better, Faster, Stronger}, 
+      author={Joseph Redmon and Ali Farhadi},
+      year={2016},
+      eprint={1612.08242},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{yolo3,
+      title={YOLOv3: An Incremental Improvement}, 
+      author={Joseph Redmon and Ali Farhadi},
+      year={2018},
+      eprint={1804.02767},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{yolov4,
+      title={YOLOv4: Optimal Speed and Accuracy of Object Detection}, 
+      author={Alexey Bochkovskiy and Chien-Yao Wang and Hong-Yuan Mark Liao},
+      year={2020},
+      eprint={2004.10934},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{frcnn,
+      title={Fast R-CNN}, 
+      author={Ross Girshick},
+      year={2015},
+      eprint={1504.08083},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{yolov5,
+  title = {YOLOv5-P6 1280 models, AWS, Supervise.ly and YouTube integrations},
+  author = {Glenn Jocher},
+  year = {2020},
+  howpublished = {\url{https://github.com/ultralytics/yolov5/releases/tag/v6.0}}
+}
+
+@misc{zhu2021tphyolov5,
+      title={TPH-YOLOv5: Improved YOLOv5 Based on Transformer Prediction Head for Object Detection on Drone-captured Scenarios}, 
+      author={Xingkui Zhu and Shuchang Lyu and Xu Wang and Qi Zhao},
+      year={2021},
+      eprint={2108.11539},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{lin2015microsoft,
+      title={Microsoft COCO: Common Objects in Context}, 
+      author={Tsung-Yi Lin and Michael Maire and Serge Belongie and Lubomir Bourdev and Ross Girshick and James Hays and Pietro Perona and Deva Ramanan and C. Lawrence Zitnick and Piotr Dollár},
+      year={2015},
+      eprint={1405.0312},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@Article{Everingham15,
+   author = "Everingham, M. and Eslami, S. M. A. and Van~Gool, L. and Williams, C. K. I. and Winn, J. and Zisserman, A.",
+   title = "The Pascal Visual Object Classes Challenge: A Retrospective",
+   journal = "International Journal of Computer Vision",
+   volume = "111",
+   year = "2015",
+   number = "1",
+   month = jan,
+   pages = "98--136",
+} 
+
+@Article{Peng2021,
+author={Peng, Liang
+and Wang, Hong
+and Li, Jun},
+title={Uncertainty Evaluation of Object Detection Algorithms for Autonomous Vehicles},
+journal={Automotive Innovation},
+year={2021},
+month={Aug},
+day={01},
+volume={4},
+number={3},
+pages={241-252},
+abstract={},
+issn={2522-8765},
+doi={10.1007/s42154-021-00154-0},
+url={https://doi.org/10.1007/s42154-021-00154-0}
+}
+
+@misc{guo2017calibration,
+      title={On Calibration of Modern Neural Networks}, 
+      author={Chuan Guo and Geoff Pleiss and Yu Sun and Kilian Q. Weinberger},
+      year={2017},
+      eprint={1706.04599},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{cvstreets,
+   title={A Computer Vision System to Localize and Classify Wastes on the Streets},
+   ISBN={9783319683454},
+   ISSN={1611-3349},
+   url={http://dx.doi.org/10.1007/978-3-319-68345-4_18},
+   DOI={10.1007/978-3-319-68345-4_18},
+   journal={Computer Vision Systems},
+   publisher={Springer International Publishing},
+   author={Rad, Mohammad Saeed and von Kaenel, Andreas and Droux, Andre and Tieche, Francois and Ouerhani, Nabil and Ekenel, Hazım Kemal and Thiran, Jean-Philippe},
+   year={2017},
+   pages={195–204}
+}
+
+@article{Mittal2016SpotGarbageSA,
+  title={SpotGarbage: smartphone app to detect garbage using deep learning},
+  author={Gaurav Mittal and Kaushal B. Yagnik and Mohit Garg and N. C. Krishnan},
+  journal={Proceedings of the 2016 ACM International Joint Conference on Pervasive and Ubiquitous Computing},
+  year={2016}
+}
+
+@inproceedings{NIPS2012_c399862d,
+ author = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {ImageNet Classification with Deep Convolutional Neural Networks},
+ url = {https://proceedings.neurips.cc/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf},
+ volume = {25},
+ year = {2012}
+}
+
+@article{sevilla,
+title = {An index to quantify street cleanliness: The case of Granada (Spain)},
+journal = {Waste Management},
+volume = {33},
+number = {5},
+pages = {1037-1046},
+year = {2013},
+issn = {0956-053X},
+doi = {https://doi.org/10.1016/j.wasman.2013.01.012},
+url = {https://www.sciencedirect.com/science/article/pii/S0956053X13000421},
+author = {Aitana Sevilla and Miguel Luis Rodríguez and Angela Garcia-Maraver and Montserrat Zamorano},
+keywords = {Cleaning Index, Street cleanliness, Sweeping}
+}
+
+@misc{rcnn,
+      title={Rich feature hierarchies for accurate object detection and semantic segmentation}, 
+      author={Ross Girshick and Jeff Donahue and Trevor Darrell and Jitendra Malik},
+      year={2014},
+      eprint={1311.2524},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{he2015spatial,
+      title={Spatial Pyramid Pooling in Deep Convolutional Networks for Visual Recognition}, 
+      author={Kaiming He and Xiangyu Zhang and Shaoqing Ren and Jian Sun},
+      year={2015},
+      eprint={1406.4729},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@article{fast-rcnn,
+  title={Fast R-CNN},
+  author={Ross B. Girshick},
+  journal={2015 IEEE International Conference on Computer Vision (ICCV)},
+  year={2015},
+  pages={1440-1448}
+}
+
+@misc{smart-street,
+author = {Ping, Ping and Kumala, Effendy and Gao, Jerry and Xu, Guoyan},
+year = {2020},
+month = {02},
+title = {Smart street litter detection and classification based on Faster R-CNN and edge computing}
+}
+
+@article{understanding-poisson,
+author = {Hayat, Matthew and Higgins, Melinda},
+year = {2014},
+month = {03},
+pages = {1-9},
+title = {Understanding Poisson Regression},
+volume = {53},
+journal = {The Journal of nursing education},
+doi = {10.3928/01484834-20140325-04}
+}
+
+@book{cameron_trivedi_2013, place={Cambridge}, edition={2}, series={Econometric Society Monographs}, title={Regression Analysis of Count Data}, DOI={10.1017/CBO9781139013567}, publisher={Cambridge University Press}, author={Cameron, A. Colin and Trivedi, Pravin K.}, year={2013}, collection={Econometric Society Monographs}}
+
+@article{defects,
+ ISSN = {00401706},
+ URL = {http://www.jstor.org/stable/1269547},
+ author = {Diane Lambert},
+ journal = {Technometrics},
+ number = {1},
+ pages = {1--14},
+ publisher = {[Taylor & Francis, Ltd., American Statistical Association, American Society for Quality]},
+ title = {Zero-Inflated Poisson Regression, with an Application to Defects in Manufacturing},
+ volume = {34},
+ year = {1992}
+}
+
+@misc{ncss-neg-bin,
+  title = {Negative Binomial Regression},
+  author = {NCSS Statistical Software},
+  howpublished = {\url{https://ncss-wpengine.netdna-ssl.com/wp-content/themes/ncss/pdf/Procedures/NCSS/Negative_Binomial_Regression.pdf}}
+}
+
 % http://cs229.stanford.edu/proj2017/final-reports/5226723.pdf
 
 % https://arxiv.org/pdf/1710.11374.pdf
@@ -108,7 +362,3 @@
 % https://www.cambridge.org/core/books/modeling-count-data/BFEB3985905CA70523D9F98DA8E64D08
 
 % http://cameron.econ.ucdavis.edu/racd/count.html
-
-% https://www.gov.scot/publications/scottish-index-multiple-deprivation-2020/pages/1/
-
-% https://www.keepscotlandbeautiful.org/media/1566897/leq-2020-report-final-041220.pdf
